--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,122 +1,335 @@
 .container {
   min-height: 100vh;
-  padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 .main {
-  padding: 5rem 0;
-  flex: 1;
+  padding-top: 5rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  min-height: 100vh;
+  min-width: 100%;
+}
+
+.bannerSection {
+  display: flex;
+  flex-direction: column;
+  padding: 0 0 0 15rem;
+  width: 90vw;
+  min-height: 90vh;
+}
+
+.bannerSection video {
+  position: absolute;
+  right: 0;
+  top: 0%;
+  height: 110%;
+  z-index: -1;
+}
+
+.secondTxt {
+  font-size: 1.5rem;
+  color: #fefefe;
+  margin: 3rem 0 0 20rem;
+}
+
+.secondTxt svg {
+  transition-duration: 0.5s;
+}
+
+.secondTxt svg:hover {
+  transform: scale(1.3);
+  transition-duration: 0.5s;
+}
+
+.icons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 50%;
+}
+
+.bannerSection svg {
+  color: #fefefe;
+  margin: 5rem 0 0 9rem;
+}
+
+.main h1 {
+  font-size: 5rem;
+  animation: text 1s ease-in-out;
+  color: #fefefe;
+}
+
+.main h2 {
+  animation: text2 1s ease-in-out;
+  color: #fefefe;
+}
+
+.main p {
+  animation: btn 1s ease-in-out;
+  font-family: "Exo", sans-serif;
+}
+
+.bannerSection button {
+  padding: 1rem;
+  width: 10rem;
+  font-size: 1.1rem;
+  font-weight: 900;
+  font-family: "Exo", sans-serif;
+  transition-duration: 0.3s;
+  background: transparent;
+  color: #eaeaea;
+  border: thin solid #fefefe;
+  animation: btn 1s ease-in-out;
+}
+
+.bannerSection button:hover {
+  cursor: pointer;
+  transform: scale(1.05);
+  transition-duration: 0.3s;
+  background: #eaeaea;
+  color: black;
+}
+
+.aboutSection {
+  display: flex;
+  flex-direction: column;
   align-items: center;
+  width: 100%;
+  min-height: 100vh;
+  background-color: #f5f5f5;
+}
+
+.aboutSection div {
+  padding: 3rem 0 3rem 0;
+}
+
+.aboutTxt {
+  transition-duration: 0.5s;
+  opacity: 0;
+  transform: translateX(-300px);
+}
+
+.aboutSection h2 {
+  animation: none;
+  padding: 3rem;
+  font-size: 2rem;
+  text-align: center;
+  color: black;
+}
+
+.aboutSection p {
+  animation: none;
+  font-size: 1.5rem;
+}
+
+.aboutSection svg {
+  transition-duration: 0.5s;
+}
+
+.aboutSection svg:hover {
+  transform: scale(1.3);
+  transition-duration: 0.5s;
+}
+
+.projectSection {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.projectSection h2 {
+  animation: none;
+  padding: 3rem;
+  font-size: 2rem;
+  color: black;
+}
+
+.projectSection p {
+  animation: none;
+  padding: 3rem;
+  font-size: 1.5rem;
+}
+
+.projectSection img {
+  margin: 0 auto;
+  width: 95%;
+  box-shadow: 3px 3px 10px 2px rgb(197, 197, 197);
+  transition-duration: 0.5s;
+  opacity: 0;
+  transform: translateX(-300px);
+}
+
+.projectSection a {
+  display: flex;
+  margin: 0 auto;
+}
+
+.projectSection img:hover {
+  cursor: pointer;
+}
+
+.arrowHome {
+  position:absolute;
+  right: 10%;
+  margin-top: 4rem;
+  transition-duration: 0.5s;
+}
+
+.arrowHome:hover {
+  transform: scale(1.3);
+  transition-duration: 0.5s;
+}
+
+.projectGallery {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  row-gap: 5rem;
+  width: 95vw;
+  padding: 3rem 0 3rem 0;
+}
+
+.more {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  min-width: 50%;
+  min-height: 50vh;
+}
+
+.more svg {
+  animation: svg 3s infinite;
 }
 
 .footer {
   width: 100%;
-  height: 100px;
+  height: 5rem;
   border-top: 1px solid #eaeaea;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-.footer img {
-  margin-left: 0.5rem;
 }
 
 .footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  padding: 0 1rem 0 1rem;
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
+@keyframes text {
+  0% {
+    opacity: 0;
+    transform: translateY(-100px);
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
 
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
+@keyframes text2 {
+  0% {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
 
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
+@keyframes btn {
+  0% {
+    opacity: 0;
+    transform: translateY(100px);
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
 
-.title,
-.description {
-  text-align: center;
+@keyframes svg {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.5);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-  margin-top: 3rem;
-}
-
-.card {
-  margin: 1rem;
-  flex-basis: 45%;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h3 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
+@media (max-width: 480px) {
+  .container {
+    min-height: 100vh;
+    min-width: 10vw;
+  }
+  .main {
+    display: flex;
     flex-direction: column;
+    padding-top: 1rem;
+  }
+  .main .bannerSection {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    align-items: center;
+    min-width: 100vw;
+    height: 70vh;
+  }
+  .main h1 {
+    font-size: 2.5rem;
+  }
+  .main h2 {
+    font-size: 1.5rem;
+  }
+  .bannerSection svg {
+    margin: 2rem 0 0 0;
+  }
+  .aboutSection div{
+    width: 90vw;
+  }
+  .aboutSection svg {
+    margin-bottom: 3rem;
+  }
+  
+  .projectGallery {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+  .projectGallery img {
+    width: 100%;
+  }
+  .secondTxt {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    align-items: center;
+    text-align: center;
+    padding-top: 1rem;
+  }
+  .arrowHome {
+    margin-top: 3.5rem;
+  }
+
+  .more {
+    display: flex;
+    flex-direction: column;
+    min-width: 100%;
+    min-height: 20vh;
+    padding-bottom: 3rem;
+  }
+  .more p {
+    padding: 1rem;
+  }
+  .footer {
+    display: flex;
+    width: 100vw;
   }
 }
