--- a/styles/Contacts.module.css
+++ b/styles/Contacts.module.css
@@ -79,3 +79,12 @@
     width: 90vw;
   }
 }
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .emailCell h2 {
+    font-size: 4rem;
+  }
+  .emailForm {
+    width: 80vw;
+  }
+}
