--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -354,7 +354,7 @@
     flex-direction: column;
     padding-left: 4rem;
     height: 70vh;
-    /* width: 100vw; */
+    width: 100vw;
   }
   .bannerSection video {
     width: 110vw;
@@ -415,12 +415,12 @@
     flex-direction: column;
     padding-top: 1rem;
   }
-  .main .bannerSection {
+  .bannerSection {
     display: flex;
     flex-direction: column;
     padding: 1rem;
     align-items: center;
-    min-width: 100vw;
+    width: 100vw;
     height: 70vh;
   }
   .main h1 {
