--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -56,7 +56,7 @@
 }
 
 .bannerSection h1 {
-  font-size: 5rem;
+  font-size: 4rem;
   animation: text 1s ease-in-out;
   color: #fefefe;
 }
@@ -360,9 +360,9 @@
     width: 110vw;
     height: 110vh;
   }
-  .bannerSection h1{
+  /* .bannerSection h1{
     font-size: 1.8rem;
-  }
+  } */
   .bannerSection h2 {
     font-size: 1.2rem;
   }
