--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -52,7 +52,6 @@
 
 .bannerSection svg {
   color: #fefefe;
-  margin-top: 2rem;
 }
 
 .bannerSection h1 {
@@ -75,17 +74,13 @@
   padding: 1rem;
   width: 12rem;
   height: 5rem;
+  color: #f5f5f5;
   font-family: "Exo", sans-serif;
   transition-duration: 0.3s;
   background: transparent;
   border: thin solid #fefefe;
   margin: 0;
   /* animation: btn 1s ease-in-out; */
-}
-
-.bannerSection button a {
-  color: #f5f5f5;
-  margin: 0;
 }
 
 .bannerSection button:hover {
@@ -99,7 +94,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  min-height: 100vh;
+  height: 90vh;
   background-color: #f5f5f5;
 }
 
@@ -122,9 +117,12 @@
   font-size: 1.5rem;
 }
 
+.aboutSection div {
+  height: 50vh;
+}
+
 .aboutSection svg {
   transition-duration: 0.5s;
-  margin-top: 4rem;
 }
 
 .aboutSection svg:hover {
