--- a/styles/Contacts.module.css
+++ b/styles/Contacts.module.css
@@ -48,10 +48,11 @@
 }
 
 .button button {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   width: 100%;
-  height: 5vh;
+  height: 4rem;
   border: none;
+  font-family: 'Exo', sans-serif;
 }
 
 .button button:hover {
