--- a/styles/globals.css
+++ b/styles/globals.css
@@ -63,7 +63,6 @@ a {
 
 @media screen and (max-width: 480px) {
   body h1 {
-    padding-top: 2rem;
     font-size: 2rem;
   }
   .desctop-nav {
@@ -102,7 +101,7 @@ a {
 
   .isOpen ul {
     background: transparent;
-    justify-content: space-around;
+    justify-content: space-evenly;
   }
   .isOpen a {
     text-decoration: none;
