--- a/styles/Contacts.module.css
+++ b/styles/Contacts.module.css
@@ -40,7 +40,7 @@
 }
 
 .button {
-  width: 10rem;
+  width: 12rem;
   transition-duration: 0.3s;
   background: transparent;
   border: solid thin black;
@@ -50,15 +50,19 @@
 .button button {
   font-size: 1.3rem;
   width: 100%;
-  height: 4rem;
+  height: 5rem;
   border: none;
   font-family: "Exo", sans-serif;
+  transition-duration: 0.3s;
 }
 
 .button button:hover {
   cursor: pointer;
   background: black;
   color: #f2f2f2;
+  box-shadow: 3px 3px 10px 2px rgb(160, 160, 160);
+  transform:  scale(1.07);
+  transition-duration: 0.3s;
 }
 
 .messageSvg {
