--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -224,6 +224,8 @@
   cursor: pointer;
   color: white;
   background: black;
+  box-shadow: 3px 3px 10px 2px rgb(160, 160, 160);
+  transform:  scale(1.1);
 }
 
 .footer {
