feat: deleted console log light house fixes

--- a/styles/Contacts.module.css
+++ b/styles/Contacts.module.css
@@ -96,7 +96,12 @@
     width: 90vw;
   }
   .button button {
-    height: 6vh;
+    height: 4.5rem;
+  }
+
+  .messageSvg{
+    text-align: center;
+    width: 80vw;
   }
 }
 
