--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -58,8 +58,9 @@
   /* animation: btn 1s ease-in-out; */
 }
 
-.bannerSection button a {
+.bannerSection button {
   color: #f5f5f5;
+  font-size: 1.3rem;
 }
 
 .bannerSection button:hover {
@@ -230,7 +231,7 @@
 
 .footer {
   width: 100%;
-  height: 5rem;
+  height: 4.5rem;
   border-top: 1px solid #eaeaea;
   display: flex;
   flex-direction: column;
