--- a/styles/globals.css
+++ b/styles/globals.css
@@ -68,12 +68,14 @@ a {
   position: fixed;
   right: 20px;
   top: 45%;
+  z-index: 2;
 }
 .side-icons a {
   transition-duration: 0.3s;
   transform: scale(1.5);
-  margin: 0.5rem
+  margin: 0.5rem;
 }
+
 .side-icons a:hover {
   transform: scale(1.8);
   transition-duration: 0.3s;
@@ -109,6 +111,10 @@ a {
     align-items: center;
     flex-direction: column;
     z-index: 1;
+  }
+
+  .side-icons {
+    display: none;
   }
 
   .isOpen li {
