--- a/styles/Contacts.module.css
+++ b/styles/Contacts.module.css
@@ -52,7 +52,7 @@
   width: 100%;
   height: 5rem;
   border: none;
-  font-family: "Exo", sans-serif;
+  font-family: sans-serif;
   transition-duration: 0.3s;
 }
 
