--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Exo:wght@300&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap");
 
 * {
   margin: 0;
@@ -11,7 +9,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: "Exo", sans-serif;
+  font-family: sans-serif;
   line-height: 2;
   scroll-behavior: smooth;
 }
@@ -31,7 +29,7 @@ nav {
 nav a {
   text-decoration: none;
   color: #fefefe;
-  font-family: "Exo", sans-serif;
+  font-family:  sans-serif;
 }
 
 nav li:hover {
