--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -231,16 +231,15 @@
 
 .footer {
   width: 100%;
-  height: 6rem;
+  height: 4rem;
   border-top: 1px solid #eaeaea;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
 .footer a {
-  margin: 1rem;
+  margin: 1rem 1rem;
 }
 
 .footer a:hover {
