--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -484,8 +484,8 @@
     width: 100%;
   }
   .projectGallery img {
-    width: 100%;
-    height: 250px;
+    width: 95vw;
+    height: 100%;
   }
   .secondTxt {
     display: flex;
@@ -516,7 +516,20 @@
     padding: 1rem;
   }
   .footer {
-    display: flex;
     width: 100vw;
+    height: 4rem;
+    border-top: 1px solid #eaeaea;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .footer div {
+    display: flex;
+    flex-direction: row;
+  }
+  
+  .footer a {
+    margin: 0.5rem 0.5rem;
   }
 }
